fixed disabled effect being too long, improved activation zone display

--- a/front/src/app/components/cards/project/playable-card/playable-card.component.scss
+++ b/front/src/app/components/cards/project/playable-card/playable-card.component.scss
@@ -173,8 +173,8 @@ app-card-tags{
 	width: 80%;
 	flex: 1;
 }
-app-card-activation{
-	width: 300px;
+app-card-activation-list{
+	width: var(--card-width);
 	height: 100%;
 }
 app-card-title{
@@ -197,7 +197,7 @@ app-card-disabled-foreground{
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: var(--card-height);
 	&.hovered{
 		opacity: 20%;
 	}
